adds borders to contact fields and adds title to contact page

--- a/themes/cjmedia/sass/_footer.scss
+++ b/themes/cjmedia/sass/_footer.scss
@@ -55,7 +55,7 @@
         font-family: $font__secondary;
         font-size: 1.2em;
         &:hover {
-            box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+            box-shadow: $btn__shadow;
     }
 }
 }
