--- a/themes/cjmedia/sass/_variables.scss
+++ b/themes/cjmedia/sass/_variables.scss
@@ -24,6 +24,7 @@ $color__border-abbr: #666;
 $color__link: royalblue;
 $color__link-visited: purple;
 $color__link-hover: midnightblue;
+$btn__shadow: 0 4px 6px 0 rgba(0,0,0,0.5);
 
 // Typography
 
