--- a/themes/cjmedia/style.css
+++ b/themes/cjmedia/style.css
@@ -770,11 +770,41 @@ object {
       width: 12rem; } }
 
 /* contact  page */
+.contact-header-box h1 {
+  font-family: "Roboto", sans-serif;
+  text-transform: uppercase;
+  font-size: 35px;
+  margin-bottom: 3px; }
+
+.contact-header-box h2 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-size: 1.875rem;
+  text-transform: none;
+  font-family: "Poppins", sans-serif;
+  font-size: 50px;
+  margin-top: 0px;
+  font-weight: 100; }
+
 .site-main-contact textarea, .wpcf7-form textarea {
-  border-radius: 40px; }
+  border-radius: 23px;
+  border: 1px solid #4d8aa0; }
 
 .site-main-contact input, .wpcf7-form input {
-  border-radius: 40px; }
+  border-radius: 23px;
+  border: 1px solid #4d8aa0; }
+
+.site-main-contact .wpcf7-submit, .wpcf7-form .wpcf7-submit {
+  border: none; }
+
+.site-main-contact .wpcf7-submit, .wpcf7-form .wpcf7-submit {
+  margin-left: 0px;
+  font-family: "Poppins", sans-serif;
+  color: white;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  padding: .8rem 2rem; }
 
 .site-main-contact {
   margin: 10em 2em 2em 2em; }
@@ -1316,9 +1346,7 @@ object {
           margin: 1.4rem; } }
       @media screen and (min-width: 1080px) {
         .site-header .menu a {
-          padding-bottom: .2rem; }
-          .site-header .menu a:active, .site-header .menu a:hover {
-            border-bottom: solid green .15rem; } }
+          padding-bottom: .2rem; } }
     .site-header .menu li {
       display: -webkit-box;
       display: -ms-flexbox;
@@ -1329,7 +1357,7 @@ object {
       font-size: 1.2em;
       letter-spacing: 1px; }
       .site-header .menu li:last-child > a {
-        background: #3c559f;
+        background: #3C549E;
         padding: .8rem 2rem;
         border-radius: 27px;
         color: white;
@@ -1340,7 +1368,10 @@ object {
           .site-header .menu li:last-child > a {
             margin: .5rem;
             width: 100%;
-            padding: .7rem 2rem; } }
+            padding: .7rem 2rem; }
+            .site-header .menu li:last-child > a:active, .site-header .menu li:last-child > a:hover {
+              -webkit-box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.5);
+                      box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.5); } }
   .site-header .menu-show {
     display: block;
     width: 100vw;
@@ -1432,5 +1463,5 @@ object {
     font-family: "Poppins", sans-serif;
     font-size: 1.2em; }
     .site-footer .cta-button:hover {
-      -webkit-box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-              box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2); }
+      -webkit-box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.5);
+              box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.5); }
