--- a/themes/cjmedia/sass/_page-templates.scss
+++ b/themes/cjmedia/sass/_page-templates.scss
@@ -95,6 +95,7 @@
         margin-bottom: 5em;
         padding-top: 8em;
         margin: 0 auto;
+        height: 60vh;
     }
     h1 {
         font-family: $font__main;
@@ -128,7 +129,7 @@
     top: 180px;
     @include tablet {
         left: 300px;
-        top: 100px;
+        top: 130px;
     }
 }
 
@@ -185,6 +186,7 @@
     .entry-content {
         max-width: 500px;
         margin: 0 auto;
+        
     }
 }
 
@@ -408,6 +410,9 @@
     margin-top: 5em;
     margin-bottom: 3em;
     width: 70%;
+    @include tablet {
+        max-width: 20em;
+    }
 }
 
 .showcase-title {
@@ -461,13 +466,15 @@
         margin-right: 1rem;
     &:hover {
         box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-        color:#DD7D74;
       }
     }
 }
 
 .cat-title {
-    padding: 2px 16px;
+    padding: 0px;
+    margin-bottom: .5em;
+    margin-top: .5em;
+    font-weight: 200;
 }
 
 /* Taxonomy Pages */
@@ -633,4 +640,9 @@
     /* bring your own prefixes */
     transform: translate(-50%, -50%);
   }
+}
+
+.error-404 {
+    height: 50vw;
+    margin: 5em 2em 0em 2em;
 }
