--- a/themes/cjmedia/sass/_page-templates.scss
+++ b/themes/cjmedia/sass/_page-templates.scss
@@ -127,6 +127,7 @@
     position: absolute;
     left: 170px;
     top: 180px;
+    z-index: -10;
     @include tablet {
         left: 300px;
         top: 130px;
@@ -186,6 +187,7 @@
     .entry-content {
         max-width: 500px;
         margin: 0 auto;
+        z-index: 99;
         
     }
 }
@@ -605,25 +607,17 @@
   /** LIGHTBOX MARKUP **/
   
   .lightbox {
-    /* Default to hidden */
     display: none;
-  
-    /* Overlay entire screen */
     position: fixed;
     z-index: 999;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
-    
-    /* A bit of padding around image */
     padding: 1em;
-  
-    /* Translucent background */
     background: rgba(0, 0, 0, 0.8);
   }
   
-  /* Unhide the lightbox when it's the target */
   .lightbox {
   &:target {
     display: block;
@@ -632,17 +626,25 @@
   
   .lightbox {
        iframe {
-    /* Full width and height */
     display: block;
     position: fixed;
     top: 50%;
     left: 50%;
-    /* bring your own prefixes */
     transform: translate(-50%, -50%);
   }
 }
 
+// 404 //
 .error-404 {
-    height: 50vw;
-    margin: 5em 2em 0em 2em;
+    height: 70vh;
+    margin: 10em 2em 0em 2em;
+    max-width: 70vw;
+
+    @include desktop {
+    height: 50vh;
+    }
+    i {
+        color: #DD7D74;
+        font-size: 8em;
+    }
 }
